# makapix-app

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  STATUS.md  build.ps1  build_android.ps1  build_ios.sh  codemagic.yaml  release_android.ps1
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  key.properties.example
app/android/app/: build.gradle.kts  google-services.json.example
app/assets/palettes/: comfort44s.gpl
app/ios/: .gitignore  Podfile  makapix_ffi.podspec
app/ios/Runner/: Info.plist  Runner.entitlements
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  engine_ffi.dart  main.dart
app/lib/club/anim/: animation_decoder.dart  animation_timeline.dart  byte_budget_lru.dart  frame_cache.dart
app/lib/club/api/: auth_api.dart  club_api_client.dart  config_api.dart  edit_api.dart  feed_api.dart  mkpx_api.dart  moderation_api.dart  notifications_api.dart  player_api.dart  pmd_api.dart  post_api.dart  profile_api.dart  safety_api.dart  search_api.dart  settings_api.dart  stats_api.dart  upload_api.dart
app/lib/club/auth/: account_validators.dart  apple_oauth.dart  club_session.dart  pkce.dart  (+2 more)
app/lib/dev/: memlab.dart
app/lib/editor/: editor_page.canvas.dart  editor_page.controls.dart  editor_page.dart  editor_page.engine.dart  editor_page.fileio.dart  editor_page.persistence.dart  editor_page.sheets.dart  editor_page.timeline.dart  editor_page.toolgrid.dart  editor_session.dart  makapix_icon.dart  makapix_icons.g.dart  palette_io.dart  palette_page.dart  thumbnail.dart  tools.dart
app/lib/share/: image_share.dart
app/lib/shell/: app_shell.dart
app/lib/ui/: layout.dart
app/test/: account_deletion_test.dart  anim_fixtures.dart  animation_decode_test.dart  animation_timeline_test.dart  artwork_detail_layout_test.dart  auth_tokens_test.dart  autosave_controller_test.dart  avatar_from_post_test.dart  byte_budget_lru_test.dart  canvas_checker_test.dart  club_account_switch_test.dart  club_account_test.dart  club_auth_url_test.dart  club_c4_test.dart  club_config_test.dart  club_edit_test.dart  club_error_test.dart  club_mkpx_test.dart  club_models_test.dart  club_pkce_test.dart  conformance_test.dart  contribute_test.dart  crop_widget_test.dart  editor_chrome_test.dart  image_share_test.dart  layout_test.dart  makapix_icons_test.dart  mod_hashtags_test.dart  paged_notifier_test.dart  palette_io_test.dart  palette_page_test.dart  persistence_test.dart  player_command_test.dart  player_device_test.dart  player_management_test.dart  profile_edit_test.dart  profile_reacted_tab_test.dart  profile_ui_test.dart  ruler_angle_test.dart  select_tool_modes_test.dart  (+9 more)
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mem.rs  png.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs  mkpx_compact.rs
crates/engine/: Cargo.toml
crates/engine/src/: buffer.rs  cleanedge.rs  color.rs  document.rs  geom.rs  history.rs  import.rs  io.rs  lib.rs  probe.rs  raster.rs  render.rs  selection.rs  session.rs  tool.rs  util.rs
crates/engine/src/session/: canvas.rs  parse.rs
crates/engine/tests/: fuzz_inputs.rs  perf.rs  scenarios.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
distribution/whatsnew/: whatsnew-en-US
docs/: club-server-cr-artwork-provenance.md  club-server-cr-avatar-from-post.md  club-server-cr-notification-actor-sqid.md  club-server-cr-remove-external-hosting.md  play-release.md
docs/audit/: README.md
docs/i18n/: DESIGN.md
docs/ios-release/: PLAN.md  apple-signin-server.md
docs/memlab/: REPORT.md  memory-limits-reference.xlsx
docs/mkpx-format/: current-format-v4-introspection.md  mkpx-format-spec-v10.md  mkpx-format-spec-v5.md  mkpx-format-spec-v6.md  mkpx-format-spec-v7.md  mkpx-format-spec-v8.md  mkpx-format-spec-v9.md
docs/mod-hashtags/: DECISIONS.md  PLAN.md  PROGRESS.md  README.md
docs/plans/: C0-auth-foundation.md  C0b-account-creation.md  C1-read-and-discover.md  C2-create-and-publish.md  C3-edit-and-remix.md  C4-dashboards-and-settings.md  editor-crop-widget.md  editor-rotate-tool.md  feed-animation-sync.md  memory-budget-enforcement.md  persistence-autosave.md  profile-reacted-tab.md
docs/profile-editing/: PLAN.md
docs/reacted-tab-investigation/: REPORT.md
docs/ugc-safety/: DECISIONS.md  PLAN.md  PROGRESS.md  README.md
examples/: demo.txt  pixel_perfect.txt  showcase.txt
prompt/: feed-animation-sync-brief.md
tools/: make_feature_graphic.ps1  make_feature_graphic_players.ps1  mock_club_server.py  play_publish.py
tools/icons/: .gitignore  README.md  build_final.py  gen_icons.py  roundtrip.html  svg2dart.py
tools/memlab/: run_ladder.ps1  run_matrix.ps1  run_matrix_device.ps1
tools/memlab/results/: android.csv  android_app.csv  android_app_pre_enforcement.csv  android_pss.csv  windows.csv
(+103 files in other folders)
