[package]
name = "makapix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "mkpx — the Tier-1 headless harness for the Makapix engine."

[[bin]]
name = "mkpx"
path = "src/main.rs"

[dependencies]
makapix-engine = { path = "../engine" }
