[package]
name = "makapix-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Image import/export for Makapix (GIF/PNG/APNG/JPEG/BMP/WebP)."

[dependencies]
makapix-engine = { path = "../engine" }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "gif", "bmp", "jpeg", "webp"]

# Pure-Rust lossless WebP encoder (the `image` crate is decode-only for WebP). Used for Makapix Club
# submissions, including muxing per-frame VP8L bitstreams into an animated WebP.
[dependencies.image-webp]
version = "0.2"
