[package]
name = "makapix-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Image import/export for Makapix (GIF/PNG/APNG/JPEG/BMP/WebP)."

[dependencies]
makapix-engine = { path = "../engine" }

# Pure-Rust DEFLATE for the `.mkpx` compact (explicit/export) envelope. Kept at the periphery so the
# engine core stays dependency-free (see docs/mkpx-format/mkpx-format-spec-v10.md §16). Already in the
# lockfile transitively via `image`, so this pins no new build cost.
miniz_oxide = "0.8"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "gif", "bmp", "jpeg", "webp"]

# Pure-Rust lossless WebP encoder (the `image` crate is decode-only for WebP). Used for Makapix Club
# submissions, including muxing per-frame VP8L bitstreams into an animated WebP.
[dependencies.image-webp]
version = "0.2"
