[package]
name = "makapix-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Makapix Editor — pure, deterministic, headless engine core."

[lib]
name = "makapix_engine"
path = "src/lib.rs"

[dependencies]
# Intentionally dependency-free: own hash, PRNG, tiled-COW buffer, and .mkpx codec.
