[package]
name = "makapix-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C ABI bridge for the Makapix engine, consumed by the Flutter shell via dart:ffi."

[lib]
name = "makapix_ffi"
# cdylib → Windows .dll / Android .so (loaded at runtime via DynamicLibrary.open)
# staticlib → iOS libmakapix_ffi.a, linked into the Runner binary and reached via
#             DynamicLibrary.process() (see app/lib/engine_ffi.dart + build_ios.sh)
# lib → used by the mkpx CLI harness and Rust integration tests
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
makapix-engine = { path = "../engine" }
makapix-codec = { path = "../codec" }
