[package]
name = "makapix-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "C ABI bridge for the Makapix engine, consumed by the Flutter shell via dart:ffi."

[lib]
name = "makapix_ffi"
# cdylib → Windows .dll / Android .so / iOS .dylib-in-framework (all loaded at runtime
#          via DynamicLibrary.open; iOS packaging in build_ios.sh). iOS was briefly a
#          staticlib + DynamicLibrary.process(), until Xcode 26's linker dead-stripped
#          the exports (2026-07-09).
# staticlib → kept for potential embedders; no shipping platform uses it today
# lib → used by the mkpx CLI harness and Rust integration tests
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
makapix-engine = { path = "../engine" }
makapix-codec = { path = "../codec" }
